--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -146,3 +146,6 @@ NetServerMaxTickRate=60
 +CollisionChannelRedirects=(OldName="VehicleMovement",NewName="Vehicle")
 +CollisionChannelRedirects=(OldName="PawnMovement",NewName="Pawn")
 
+
+[CoreRedirects]
++FunctionRedirects=(OldName="/Script/Blaster.BlasterCharacter.Elim",NewName="/Script/Blaster.BlasterCharacter.MulticastElim")
