--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -149,3 +149,4 @@ NetServerMaxTickRate=60
 
 [CoreRedirects]
 +FunctionRedirects=(OldName="/Script/Blaster.BlasterCharacter.Elim",NewName="/Script/Blaster.BlasterCharacter.MulticastElim")
++PropertyRedirects=(OldName="/Script/Blaster.CharacterOverlay.AmmoAmount",NewName="/Script/Blaster.CharacterOverlay.WeaponAmmoAmount")
