--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -151,3 +151,4 @@ NetServerMaxTickRate=60
 +FunctionRedirects=(OldName="/Script/Blaster.BlasterCharacter.Elim",NewName="/Script/Blaster.BlasterCharacter.MulticastElim")
 +PropertyRedirects=(OldName="/Script/Blaster.CharacterOverlay.AmmoAmount",NewName="/Script/Blaster.CharacterOverlay.WeaponAmmoAmount")
 +PropertyRedirects=(OldName="/Script/Blaster.CombatComponent.StartingGranadeAmmo",NewName="/Script/Blaster.CombatComponent.StartingGrenadeAmmo")
++PropertyRedirects=(OldName="/Script/Blaster.Projectile.RocketMesh",NewName="/Script/Blaster.Projectile.ProjectileMesh")
