--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -15,7 +15,7 @@ Compiler=Default
 AudioSampleRate=48000
 AudioCallbackBufferFrameSize=1024
 AudioNumBuffersToEnqueue=1
-AudioMaxChannels=0
+AudioMaxChannels=5000
 AudioNumSourceWorkers=4
 SpatializationPlugin=
 SourceDataOverridePlugin=
@@ -152,3 +152,28 @@ NetServerMaxTickRate=60
 +PropertyRedirects=(OldName="/Script/Blaster.CharacterOverlay.AmmoAmount",NewName="/Script/Blaster.CharacterOverlay.WeaponAmmoAmount")
 +PropertyRedirects=(OldName="/Script/Blaster.CombatComponent.StartingGranadeAmmo",NewName="/Script/Blaster.CombatComponent.StartingGrenadeAmmo")
 +PropertyRedirects=(OldName="/Script/Blaster.Projectile.RocketMesh",NewName="/Script/Blaster.Projectile.ProjectileMesh")
+
+[/Script/Engine.AudioSettings]
+DefaultSoundClassName=/Engine/EngineSounds/Master.Master
+DefaultMediaSoundClassName=/Engine/EngineSounds/Master.Master
+DefaultSoundConcurrencyName=None
+DefaultBaseSoundMix=None
+VoiPSoundClass=None
+MasterSubmix=/Engine/EngineSounds/Submixes/MasterSubmixDefault.MasterSubmixDefault
+BaseDefaultSubmix=None
+ReverbSubmix=/Engine/EngineSounds/Submixes/MasterReverbSubmixDefault.MasterReverbSubmixDefault
+EQSubmix=/Engine/EngineSounds/Submixes/MasterEQSubmixDefault.MasterEQSubmixDefault
+VoiPSampleRate=Low16000Hz
+DefaultAudioCompressionType=BinkAudio
+MaximumConcurrentStreams=2
+GlobalMinPitchScale=0.400000
+GlobalMaxPitchScale=2.000000
++QualityLevels=(DisplayName=NSLOCTEXT("AudioSettings", "DefaultSettingsName", "Default"),MaxChannels=500)
+bAllowPlayWhenSilent=True
+bDisableMasterEQ=False
+bAllowCenterChannel3DPanning=False
+NumStoppingSources=493
+PanningMethod=Linear
+MonoChannelUpmixMethod=Linear
+DialogueFilenameFormat="{DialogueGuid}_{ContextId}"
+
